automation-application/hello-world/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/instance: hello-world
    app.kubernetes.io/name: hello-world
